--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - "10306:3306/tcp"
     environment:
       - MARIADB_ROOT_PASSWORD=this-is-secret
+    volumes:
+      - "${db_dir}:/var/lib/mysql"
 
   app:
     image: php:7.4-fpm-alpine3.12
