add AdminLTE 3 submodule

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "10080:80/tcp"
     volumes:
-      - "./src/www:/var/www"
+      - "./src/www/adminlte:/usr/share/nginx/html:ro"
       - "./config/nginx.conf:/etc/nginx/nginx.conf:ro"
 
   db:
