--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,12 @@ services:
       - "./config/nginx.conf:/etc/nginx/nginx.conf:ro"
 
   db:
-    image: mariadb:10.2-bionic
+    image: mysql:5.7
     container_name: interop_db
     ports:
       - "10306:3306/tcp"
     environment:
-      - MARIADB_ROOT_PASSWORD=this-is-secret
+      - MYSQL_ROOT_PASSWORD=this-is-secret
     volumes:
       - "${db_dir}:/var/lib/mysql"
 
