--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ src/sikap/lib/lib-plugins.php
 src/sikap/lib/config.php
 
 src/sikap/lib/lib-plugins.php
+
+src/sidak/lib/config.php
+
+src/sidak/lib/lib-plugins.php
