sidak-jabatan dan kepangkatan

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ src/sikap/lib/lib-plugins.php
 src/sidak/lib/config.php
 
 src/sidak/lib/lib-plugins.php
+
+src/sidak/lib/lib-plugins.php
+
+src/sidak/lib/config.php
